force-app/main/default/objects/SVMXA360__CONF_TimelineConfig__c/SVMXA360__CONF_TimelineConfig__c.object-meta.xml
<CustomObject>
    <description>This object stores configurations for the timeline component.</description>
    <label>Timeline Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timeline Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>