force-app/main/default/objects/SVMXA360__CONF_TimelineConfig__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>Description of the configuration</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of the configuration</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>