force-app/main/default/objects/SVMXA360__CONF_TimelineConfig__c/fields/SVMXA360__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the current configuration is the default configuration.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>